--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,354 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU</title>
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/general.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com"
+     crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <link href="
+    https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
+    " rel="stylesheet">
+
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page-body">
+    <header class="header">
+      <div class="header__header-left">
+        <a
+            href="#menu"
+            class="icon icon--menu"
+          ></a>
+
+        <a href="#" class="header__logo-link">
+          <img src="./images/logo-icon.svg"
+          alt="logo-icon" class="header-logo-img">
+        </a>
+      </div>
+
+      <div class="header__header-right">
+
+        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <div class="header__header-tickets-button-cont">
+          <a href="#" class="header__tickets-button">КВИТКИ</a>
+          <a href="#" class="header__tickets-button-arrow">
+            <img src="./images/bilets-button-arrow.svg"
+            alt="arrow-img" class="tickets-button-arrow-img">
+          </a>
+        </div>
+
+        <a href="#"class="header__events-space-text">Події</a>
+        <a href="#" class="header__events-space-line"></a>
+
+      </div>
+    </header>
+    <aside
+      class="page-body__menu"
+      id="menu"
+    >
+      <div class="menu">
+        <div class="menu__up-container">
+          <div class="header__contact-container">
+            <a
+              href="#"
+              class="icon icon--close-menu"
+            ></a>
+          </div>
+        </div>
+
+        <nav class="nav">
+          <div class="nav__first-collum nav__first-collum--pad-left">
+            <a href="#" class="nav__link">Галерея</a>
+            <a href="#" class="nav__link">Виставки та події</a>
+          </div>
+          <div class="nav__second-collum">
+            <a href="#" class="nav__link">Про Нас</a>
+            <a href="#" class="nav__link">Контакти</a>
+          </div>
+
+          <div class="nav__grafic-weekend-cont">
+
+            <div class="nav__grafic-cont">
+              <h3 class="nav__title">Графік роботи</h3>
+              <ul class="nav__grafic-list">
+                <li class="nav__grafic-cell">
+                  <strong>12:00
+                  — 20:00
+                  </strong>середа
+                </li>
+                <li class="nav__grafic-cell">
+                  <strong>12:00
+                  — 20:00
+                  </strong>четвер
+                </li>
+                <li class="nav__grafic-cell">
+                  <strong>12:00
+                    — 20:00
+                  </strong>п’ятниця
+                </li>
+                <li class="nav__grafic-cell">
+                  <strong>11:00 — 19:00
+                  </strong>субота
+                </li>
+                <li class="nav__grafic-cell">
+                  <strong>11:00 — 19:00
+                  </strong>неділя
+                </li>
+              </ul>
+            </div>
+            <div class="nav__weekend-cont">
+              Вихідні понеділок, вівторок
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </div>
+          </div>
+        </nav>
+      </div>
+    </aside>
+    <main class="main">
+      <section class="actual-events-section">
+        <h2 class="actual-events-section__section-title">Актуальні події</h2>
+
+        <div class="actual-events-section__event-cont">
+          <a href="#" class="actual-events-section__img-link">
+            <img src="./images/actual-event-image-pc.png"
+            alt="img" class="actual-events-section__img">
+          </a>
+          <div class="actual-events-section__event-date-description-cont">
+            <div class="actual-events-section__event-date-cont">
+              <p class="actual-events-section__event-text">ВИСТАВКА</p>
+              <p class="actual-events-section__event-date">26.08-29.11.2019</p>
+            </div>
+
+            <div class="actual-events-section__event-description-cont">
+              <h3 class="actual-events-section__event-description-title">Йду і повертаюсь</h3>
+              <p class="actual-events-section__event-description-text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="actual-events-section__event-cont">
+          <a href="#" class="actual-events-section__img-link">
+            <img src="./images/actual-event-image-pc-1.png"
+            alt="img" class="actual-events-section__img">
+          </a>
+          <div class="actual-events-section__event-date-description-cont">
+            <div class="actual-events-section__event-date-cont">
+              <p class="actual-events-section__event-text">ВИСТАВКА</p>
+              <p class="actual-events-section__event-date">26.08-29.11.2019</p>
+            </div>
+
+            <div class="actual-events-section__event-description-cont">
+              <h3 class="actual-events-section__event-description-title">І спогади і мрії</h3>
+              <p class="actual-events-section__event-description-text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+            </div>
+          </div>
+
+        </div>
+
+
+      </section>
+
+      <section class="lection-date-section">
+        <div class="lection-date-section__lection-date-cont">
+          <img src="./images/lection-date-image-pc.png" alt="lection-img"
+          class="lection-date-section__lection-img">
+
+          <div class="lection-date-section__lection-cont">
+            <div class="lection-date-section__date-cont">
+              <p class="lection-date-section__date-text">ЛЕКЦІЯ</p>
+              <p class="lection-date-section__date">26/08/2019 - 11:00</p>
+            </div>
+
+            <h3 class="lection-date-section__lection-title">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section>
+
+      <section id="mySlider" class="gallery-section splide">
+        <h2 class="gallery-section__title">Галерея</h2>
+        <div class="gallery-section__wrapper splide__track">
+          <ul class="gallery-section__wraper-list splide__list">
+            <li class="gallery-section__slide splide__slide">
+              <picture>
+                <source media="(min-width:1280px)" srcset="./images/gallery-image-pc.png">
+                <source media="(min-width:768px)" srcset="./images/gallery-image-tablet.png">
+                <img src="./images/gallery-image-mobile.png" alt="gallery-img">
+              </picture>
+            </li>
+            <li class="gallery-section__slide splide__slide">
+              <picture>
+                <source media="(min-width:1280px)" srcset="./images/gallery-image-pc-alt-1.png">
+                <source media="(min-width:768px)" srcset="./images/gallery-image-mobile-1.png">
+                <img src="./images/gallery-image-mobile.png" alt="gallery-img">
+              </picture>
+            </li>
+            <li class="gallery-section__slide splide__slide">
+              <picture>
+                <source media="(min-width:1280px)" srcset="./images/gallery-image-pc-alt-2.png">
+                <source media="(min-width:768px)" srcset="./images/gallery-image-tablet.png">
+                <img src="./images/gallery-image-mobile.png" alt="gallery-img">
+              </picture>
+            </li>
+
+            <li class="gallery-section__slide splide__slide">
+              <picture>
+                <source media="(min-width:1280px)" srcset="./images/gallery-image-pc-alt-3.png">
+                <source media="(min-width:768px)" srcset="./images/gallery-image-pc-alt-3.png">
+                <img src="./images/gallery-image-mobile.png" alt="gallery-img">
+              </picture>
+            </li>
+          </ul>
+        </div>
+
+        <div class="gallery-section__pc-wrapper">
+          <img src="./images/gallery-image-pc.png"
+           alt="pc-slide" class="gallery-section__pc-slide">
+          <img src="./images/gallery-image-pc-alt-1.png"
+           alt="pc-slide" class="gallery-section__pc-slide">
+          <img src="./images/gallery-image-pc-alt-2.png"
+           alt="pc-slide" class="gallery-section__pc-slide">
+          <img src="./images/gallery-image-pc-alt-3.png"
+           alt="pc-slide" class="gallery-section__pc-slide">
+        </div>
+
+      </section>
+
+      <section class="subscribe-section">
+        <picture>
+          <source media="(min-width: 1280px)" srcset="./images/subscribe-image-pc.png">
+          <source media="(min-width: 768px)" srcset="./images/subscribe-image-tablet.png">
+          <img src="./images/subscribe-image-mobile.png"
+          alt="subscribe-cover-img" class="subscribe-section__cover-img">
+        </picture>
+
+        <div class="subscribe-section__subscribe-cont">
+          <div class="subscribe-section__subscribe-description-cont">
+            <h2 class="subscribe-section__title">Підписка</h2>
+            <p class="subscribe-section__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          </div>
+
+          <form action="#"
+          method="get"
+          class="subscribe-section__subscribe-form">
+
+            <input id="emailInput"
+            placeholder="E-mail" class="subscribe-section__email-input"
+            type="email" name="email"
+            required>
+            <button
+            id="submitButton"
+            class="subscribe-section__button-input"><img src="./images/button-arrow.svg" alt="arrow"></button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__logo-grafic-contants-cont">
+
+        <div class="footer__logo-sites-cont">
+          <a href="#" class="footer__logo-link">
+            <img src="./images/logo-icon.svg" alt="logo"
+          class="footer__logo-img">
+          </a>
+          <div class="footer__sites-cont">
+            <a href="#" class="footer__site-link">
+              <img src="./images/facebook-letter-logo.svg" alt="facebook-link
+              "class="footer__site-img">
+            </a>
+            <a href="#" class="footer__site-link">
+              <img src="./images/instagram.svg" alt="facebook-link
+              " class="footer__site-img">
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__grafic-weekend-cont">
+          <h3 class="footer__grafic-title">Графік роботи:</h3>
+          <div class="footer__grafic-cont">
+            <ul class="footer__grafic-list">
+              <li class="footer__grafic-cell">
+                <strong>12:00
+                — 20:00
+                </strong>середа
+              </li>
+              <li class="footer__grafic-cell">
+                <strong>12:00
+                — 20:00
+                </strong>четвер
+              </li>
+              <li class="footer__grafic-cell">
+                <strong>12:00
+                  — 20:00
+                </strong>п’ятниця
+              </li>
+              <li class="footer__grafic-cell">
+                <strong>11:00 — 19:00
+                </strong>субота
+              </li>
+              <li class="footer__grafic-cell">
+                <strong>11:00 — 19:00
+                </strong>неділя
+              </li>
+            </ul>
+          </div>
+          <div class="footer__weekend-cont">
+            Вихідні понеділок, вівторок
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </div>
+        </div>
+
+        <div class="footer__contacts-cont">
+          <h3 class="footer__contacts-title">Контакти:</h3>
+          <a href="https://maps.app.goo.gl/9nyRBBs8vmxdo9Th7" class="footer__contacts-address"
+          target="_blank">вул. М. Грушевського, 6; Київ, 01001
+          </a>
+          <a href="tel:+38 (044) 278-13-57" class="footer__contacts-tel">тел. +38 (044) 278-13-57
+          </a>
+          <a href="tel:+38 (044) 278-74-54" class="footer__contacts-tel">факс +38 (044) 278-74-54
+          </a>
+          <a href="mailto:info@namu.kiev.ua" class="footer__contacts-email">e-mail: info@namu.kiev.ua</a>
+        </div>
+
+        <div class="footer__button-return-cont">
+          <a href="#logo" class="footer__button-return-link">
+            <img src="./images/footer-return-arrow.png"
+            alt="arrow-return" class="button-return-img">
+          </a>
+        </div>
+
+        <nav class="nav-cont">
+          <div class="nav-cont__first-collum">
+            <a href="#" class="nav-cont__nav-link">Галерея</a>
+            <a href="#" class="nav-cont__nav-link">Виставки та події</a>
+          </div>
+
+          <div class="nav-cont__second-collum">
+            <a href="#" class="nav-cont__nav-link">Про нас</a>
+            <a href="#" class="nav-cont__nav-link">Контакти</a>
+          </div>
+        </nav>
+      </div>
+
+
+
+    </footer>
+
   </body>
+  <script src="
+https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
+"></script>
+  <script src="scripts/main.js"></script>
 </html>
