--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <link
+      rel="icon"
+      href="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.svg"
+    />
+    <title>museum</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
@@ -66,6 +70,13 @@
             />
           </div>
         </a>
+      </div>
+      <div class="header__line">
+        <img
+          src="./images/Group 30.png"
+          alt="eventArrow"
+          class="header__line__img"
+        />
       </div>
     </header>
     <aside class="aside">
@@ -134,16 +145,18 @@
             alt="eventsArticle1"
             class="events__article__img"
           />
-          <div class="events__article__text">
-            <div>ВИСТАВКА</div>
-            <div>26.08-29.11.2019</div>
+          <div class="events__conteiner">
+            <div class="events__article__text">
+              <div>ВИСТАВКА</div>
+              <div>26.08-29.11.2019</div>
+            </div>
+            <h3 class="events__article__title">Йду і повертаюсь</h3>
+            <p class="events__article__discription">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
+            </p>
           </div>
-          <h3 class="events__article__title">Йду і повертаюсь</h3>
-          <p class="events__article__discription">
-            Національний Художній Музей України презентує унікальну частину
-            колекції Градобанку - українське мистецтво другої половини 1980-1995
-            років.
-          </p>
         </article>
         <article class="events__article">
           <img
@@ -151,16 +164,18 @@
             alt="eventsArticle2"
             class="events__article__img"
           />
-          <div class="events__article__text">
-            <div>ВИСТАВКА</div>
-            <div>26.08-29.11.2019</div>
+          <div class="events__conteiner">
+            <div class="events__article__text">
+              <div>ВИСТАВКА</div>
+              <div>26.08-29.11.2019</div>
+            </div>
+            <h3 class="events__article__title">І спогади і мрії</h3>
+            <p class="events__article__discription">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
           </div>
-          <h3 class="events__article__title">І спогади і мрії</h3>
-          <p class="events__article__discription">
-            Національний художній музей України до 100 річчя від дня народження
-            видатної української художниці Тетяни Яблонської відкриває
-            ретроспективну ювілейну виставку «І спогади і мрії».
-          </p>
         </article>
         <article class="events__article events__position">
           <img
@@ -191,28 +206,38 @@
                 <img
                   src="./images/Gallery 13.10.png"
                   alt="UkrainianGirl"
-                  class="gallery__slider-img"
+                  class="gallery__slider-img img-a"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   src="./images/Gus 24.1.png"
                   alt="Gus"
-                  class="gallery__slider-img"
+                  class="gallery__slider-img hidden"
                 />
-              </div>
-              <div class="swiper-slide">
-                <img
-                  src="./images/eventsArticle 3.png"
-                  alt="Dawn"
-                  class="gallery__slider-img"
-                />
-              </div>
-              <div class="swiper-slide">
                 <img
                   src="./images/Winter.png"
                   alt="Winter"
-                  class="gallery__slider-img"
+                  class="gallery__slider-img img-b doppel--foto"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/Woman 13.3.png"
+                  alt="Woman"
+                  class="gallery__slider-img img-c"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/see.4.png"
+                  alt="see"
+                  class="gallery__slider-img img-d"
+                />
+                <img
+                  src="./images/Gallery 13.10.png"
+                  alt="UkrainianGirl"
+                  class="gallery__slider-img gallery__slider-img--tablet"
                 />
               </div>
             </div>
@@ -246,135 +271,153 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__top">
-        <h1 class="footer__title">NA MU</h1>
-        <div class="footer__social">
-          <a
-            href="https://www.facebook.com/"
-            class="footer__social__icon"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img
-              src="./images/facebook-letter-logo.png"
-              alt="facebook"
-              class="footer__social__icon--img"
-            />
-          </a>
-          <a
-            href="https://www.instagram.com/accounts/login/"
-            class="footer__social__icon"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img
-              src="./images/instagram (3).png"
-              alt="instagram"
-              class="footer__social__icon--img"
-            />
-          </a>
-        </div>
-      </div>
-      <div class="footer__content">
-        <div class="botom botom--footer">
-          <p class="plan plan--text">Графік роботи</p>
-          <ul class="botom__planList">
-            <li
-              class="botom__planList__workTime botom__planList__workTime--text"
-            >
-              12:00 — 20:00 середа
-            </li>
-            <li
-              class="botom__planList__workTime botom__planList__workTime--text"
-            >
-              12:00 — 20:00 четвер
-            </li>
-            <li
-              class="botom__planList__workTime botom__planList__workTime--text"
-            >
-              12:00 — 20:00 п’ятниця
-            </li>
-            <li
-              class="botom__planList__workTime botom__planList__workTime--text"
-            >
-              11:00 — 19:00 субота
-            </li>
-            <li
-              class="botom__planList__workTime botom__planList__workTime--text"
-            >
-              11:00 — 19:00 неділя
-            </li>
-          </ul>
-          <p class="plan plan--text">
-            <span class="plan__title plan__title--text">Вихідні:</span>
-            понеділок, вівторок
-          </p>
-          <p class="plan plan--text">
-            Каса припиняє роботу за 1 годину до закриття музею
-          </p>
-        </div>
-        <div
-          class="footer__contacts"
-          id="contacts"
-        >
-          <p class="plan plan--text">Контакти</p>
-          <p class="plan plan--text">
-            вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57 факс
-            +38 (044) 278-74-54 e-mail:
+      <div class="footer__conteiner">
+        <div class="footer__top">
+          <h1 class="footer__title">NA MU</h1>
+          <div class="footer__social">
             <a
-              href="mailto:info@namu.kiev.ua"
-              class="plan plan--text"
+              href="https://www.facebook.com/"
+              class="footer__social__icon"
               target="_blank"
               rel="noopener noreferrer"
             >
-              info@namu.kiev.ua
+              <img
+                src="./images/facebook-letter-logo.png"
+                alt="facebook"
+                class="footer__social__icon--img"
+              />
             </a>
-          </p>
+            <a
+              href="https://www.instagram.com/accounts/login/"
+              class="footer__social__icon"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
+                src="./images/instagram (3).png"
+                alt="instagram"
+                class="footer__social__icon--img"
+              />
+            </a>
+          </div>
         </div>
-      </div>
-      <a
-        href="#header"
-        class="footer__up"
-      >
-        <img
-          src="./images/ArrowUp.png"
-          alt="ArrowUp"
-          class="footer__up__img"
-        />
-      </a>
-      <div class="menu menu--footer">
-        <div class="menu__galereyFoto menu__galereyFoto--footer">
+        <div class="footer__flex">
+          <div class="footer__content">
+            <div class="botom botom--footer">
+              <p class="plan plan--text">Графік роботи</p>
+              <ul class="botom__planList">
+                <li
+                  class="botom__planList__workTime botom__planList__workTime--text"
+                >
+                  12:00 — 20:00 середа
+                </li>
+                <li
+                  class="botom__planList__workTime botom__planList__workTime--text"
+                >
+                  12:00 — 20:00 четвер
+                </li>
+                <li
+                  class="botom__planList__workTime botom__planList__workTime--text"
+                >
+                  12:00 — 20:00 п’ятниця
+                </li>
+                <li
+                  class="botom__planList__workTime botom__planList__workTime--text"
+                >
+                  11:00 — 19:00 субота
+                </li>
+                <li
+                  class="botom__planList__workTime botom__planList__workTime--text"
+                >
+                  11:00 — 19:00 неділя
+                </li>
+              </ul>
+              <p class="plan plan--text">
+                <span class="plan__title plan__title--text">Вихідні:</span>
+                понеділок, вівторок
+              </p>
+              <p class="plan plan--text">
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+            <div
+              class="footer__contacts"
+              id="contacts"
+            >
+              <p class="plan plan--text">Контакти</p>
+              <p class="plan plan--text">
+                вул. М. Грушевського, 6; Київ, 01001 тел.
+                <a
+                  href="tel:+380442781357"
+                  class="plan plan--text"
+                >
+                  +38 (044) 278-13-57
+                </a>
+                факс
+                <a
+                  href="tel:+380442787454"
+                  class="plan plan--text"
+                >
+                  +38 (044) 278-74-54
+                </a>
+                <br />
+                e-mail:
+                <a
+                  href="mailto:info@namu.kiev.ua"
+                  class="plan plan--text"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  info@namu.kiev.ua
+                </a>
+              </p>
+            </div>
+          </div>
           <a
-            href="#gallery"
-            class="menu__galereyFoto__links menu__galereyFoto__links--text"
+            href="#header"
+            class="footer__up"
           >
-            Галерея
+            <img
+              src="./images/ArrowUp.png"
+              alt="ArrowUp"
+              class="footer__up__img"
+            />
           </a>
-          <a
-            href="#events"
-            class="menu__galereyFoto__links menu__galereyFoto__links--text"
-          >
-            Виставки та події
-          </a>
-        </div>
-        <div class="menu__galereyFoto menu__galereyFoto--footer">
-          <a
-            href="#"
-            class="menu__galereyFoto__links menu__galereyFoto__links--text"
-          >
-            Про Нас
-          </a>
-          <a
-            href="#contacts"
-            class="menu__galereyFoto__links menu__galereyFoto__links--text"
-          >
-            Контакти
-          </a>
+          <div class="menu menu--footer">
+            <div class="menu__galereyFoto menu__galereyFoto--footer">
+              <a
+                href="#gallery"
+                class="menu__galereyFoto__links menu__galereyFoto__links--text"
+              >
+                Галерея
+              </a>
+              <a
+                href="#events"
+                class="menu__galereyFoto__links menu__galereyFoto__links--text"
+              >
+                Виставки та події
+              </a>
+            </div>
+            <div class="menu__galereyFoto menu__galereyFoto--footer">
+              <a
+                href="#"
+                class="menu__galereyFoto__links menu__galereyFoto__links--text"
+              >
+                Про Нас
+              </a>
+              <a
+                href="#contacts"
+                class="menu__galereyFoto__links menu__galereyFoto__links--text"
+              >
+                Контакти
+              </a>
+            </div>
+          </div>
         </div>
       </div>
       <div class="footer__desing">
         <div class="footer__desing--text">Designed by Zhyriada Marina</div>
-        <div class="footer__desing--text">
+        <div class="footer__desing--text end">
           Copyright © 2019. All Rights Reserved.
         </div>
       </div>
