--- a/src/index.html
+++ b/src/index.html
@@ -324,13 +324,19 @@
             </a>
           </div>
           <div class="footer__social">
-            <a href="https://www.facebook.com/namu.museum" target="_blank">
+            <a
+              href="https://www.facebook.com/namu.museum"
+              target="_blank"
+            >
               <img
                 src="./images/icons/facebook.svg"
                 alt="facebook"
               />
             </a>
-            <a href="https://www.instagram.com/namu.museum/" target="_blank">
+            <a
+              href="https://www.instagram.com/namu.museum/"
+              target="_blank"
+            >
               <img
                 src="./images/icons/instagram.svg"
                 alt="instagram"
@@ -356,16 +362,27 @@
 
               <div class="footer__schedule__info">
                 <p>
-                  Вихідні понеділок, вівторок. Каса припиняє роботу за 1 годину до
-                  закриття музею
+                  Вихідні понеділок, вівторок. Каса припиняє роботу за 1 годину
+                  до закриття музею
                 </p>
               </div>
             </div>
             <div class="footer__contacts">
               <p class="footer__contacts-title">Контакти:</p>
               <p>
-                вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57 факс
-                +38 (044) 278-74-54 e-mail: info@namu.kiev.ua
+                <a
+                  href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0,+02000/@50.449395,30.5282085,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?entry=ttu&g_ep=EgoyMDI1MDUyMS4wIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D"
+                  target="_blank"
+                >
+                вул. М. Грушевського, 6;
+                <br />
+                Київ, 01001
+                <br />
+                <a href="tel:+380442781357">+38 (044) 278-13-57</a>
+                <br />
+                <a href="tel:+380442787454">+38 (044) 278-74-54</a>
+                <br />
+                <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
               </p>
             </div>
           </div>
@@ -389,9 +406,7 @@
             </div>
           </div>
         </div>
-
       </div>
-
 
       <div class="footer__copyright">
         <p>Designed by Zhyriada Marina</p>
